--- a/views/home.erb
+++ b/views/home.erb
@@ -1,5 +1,5 @@
 <h1>Startup Sprint!</h1>
-<img src="startup-sprint/public/images/learnco.png">
+<img src="https://pbs.twimg.com/profile_images/564500709740404736/DCXWVVO0.jpeg">
 
 <h3>Subscribe to the Startup Sprint newsletter</h3>
 <% if @error == 'email' %>
