--- a/views/VFAsplash.erb
+++ b/views/VFAsplash.erb
@@ -1,1 +1,3 @@
-<h1>Welcome to VFA Flatiron training!</h1>
+<center><h1>Welcome to VFA Flatiron training!</h1>
+<img src=https://media.licdn.com/media/p/4/005/069/05a/1ca47fa.png>
+</center>
