--- a/views/VFAsplash.erb
+++ b/views/VFAsplash.erb
@@ -1,3 +1,5 @@
 <center><h1>Welcome to VFA Flatiron training!</h1>
 <img src=https://media.licdn.com/media/p/4/005/069/05a/1ca47fa.png>
+Spencer the Magnificent is ready to guide you in your very own Start Up Sprint.
+<url=localhost:9292>Enter</url>
 </center>
