added youtube video

--- a/views/test.html
+++ b/views/test.html
@@ -16,6 +16,6 @@
         <!-->
           INSERT HTML BELOW
         <!-->
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/6nr8hPnZfMU" frameborder="0" allowfullscreen></iframe>
       </body>
 </html>   
