--- a/views/youtube.erb
+++ b/views/youtube.erb
@@ -1,1 +1,1 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/6nr8hPnZfMU" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/ju2_Z62qjhc" frameborder="0" allowfullscreen></iframe>
