--- a/views/team.erb
+++ b/views/team.erb
@@ -6,7 +6,7 @@
     <th>Name</th>
   </tr>
   <tr>
-    <td><img src="../public/images/niki.jpg"></td>
+    <td><img src="images/niki.jpg"></td>
     <td>Niki Chimberg</td>
   </tr>
   <tr>
