--- a/views/team.erb
+++ b/views/team.erb
@@ -10,23 +10,23 @@
     <td>Niki Chimberg</td>
   </tr>
   <tr>
-    <td><img src="../public/images/kurt.jpg"></td>
+    <td><img src="images/kurt.jpg"></td>
     <td>Kurt Alles</td>
   </tr>
   <tr>
-    <td><img src="../public/images/jordan.jpg"></td>
+    <td><img src="images/jordan.jpg"></td>
     <td>Jordan Robarge</td>
   </tr>
   <tr>
-    <td><img src="../public/images/amanda.jpg"></td>
+    <td><img src="images/amanda.jpg"></td>
     <td>Amanda Tien</td>
   </tr>
   <tr>
-    <td><img src="../public/images/dextina.jpg"></td>
+    <td><img src="images/dextina.jpg"></td>
     <td>Dextina Booker</td>
   </tr>
   <tr>
-    <td><img src="../public/images/pooja.jpg"></td>
+    <td><img src="public/images/pooja.jpg"></td>
     <td>Pooja Kodavanti</td>
   </tr>
 </table>
