--- a/views/team.erb
+++ b/views/team.erb
@@ -26,7 +26,7 @@
     <td>Dextina Booker</td>
   </tr>
   <tr>
-    <td><img src="public/images/pooja.jpg"></td>
+    <td><img src="images/pooja.jpg"></td>
     <td>Pooja Kodavanti</td>
   </tr>
 </table>
