--- a/views/youtube.erb
+++ b/views/youtube.erb
@@ -1,1 +1,7 @@
+
+<center>
+
+<h2>Beyonce</h2>
+
 <iframe width="560" height="315" src="https://www.youtube.com/embed/ju2_Z62qjhc" frameborder="0" allowfullscreen></iframe>
+</center>
