--- a/views/home.erb
+++ b/views/home.erb
@@ -2,9 +2,9 @@
 <img src="https://pbs.twimg.com/profile_images/564500709740404736/DCXWVVO0.jpeg">
 
 <h3>Subscribe to the Startup Sprint newsletter</h3>
-<% if @error == 'email' %>
+<!-- <% if @error == 'email' %>
   <p style="color: red;">Please enter a valid email</p>
-<% end %>
+<% end %> -->
 <form method=POST action="/subscribe">
   <label for="full-name">Full Name</label>
   <input type="text" id="full-name" name="full_name" required>
