updated video to 7/11

--- a/views/youtube.erb
+++ b/views/youtube.erb
@@ -1,1 +1,1 @@
-<iframe width="560" height="315" src="https://www.youtube.com/embed/ju2_Z62qjhc" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/k4YRWT_Aldo" frameborder="0" allowfullscreen></iframe>
