add location field to subscribe

--- a/views/test.html
+++ b/views/test.html
@@ -13,9 +13,6 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-->
-          INSERT HTML BELOW
-        <!-->
-<iframe width="560" height="315" src="https://www.youtube.com/embed/6nr8hPnZfMU" frameborder="0" allowfullscreen></iframe>
+<div style="background-color:red; padding:50px"></div>
       </body>
 </html>   
