--- a/views/subscribe.erb
+++ b/views/subscribe.erb
@@ -1,3 +1,3 @@
-<p>Thanks for subscribing <%= @full_name %></p>
+<p>Thanks for subscribing <%= @full_name %> from <%= @location %></p>
 
 <a href="/">Home</a>
