vfa splash update

--- a/views/VFAsplash.erb
+++ b/views/VFAsplash.erb
@@ -1,7 +1,7 @@
 <center>
-<h1>Welcome to VFA Flatiron training!</h1>
-<img src="https://media.licdn.com/media/p/4/005/069/05a/1ca47fa.png">
-<p>
-  Spencer the Magnificent is ready to guide you in your very own Start Up Sprint.
+<body bgcolor="#D1ECF6">
+<h1>Flatiron School + Venture for America</h1>
+<br>
+<td><img src="images/vfakids.jpg"></td>
 </p>
 </center>
