vfa splash update 3

--- a/views/VFAsplash.erb
+++ b/views/VFAsplash.erb
@@ -2,6 +2,6 @@
 <body bgcolor="#D1ECF6">
 <h1>Flatiron School + Venture for America</h1>
 <br>
-<td><img src="images/vfakids.jpg"></td>
+<td><img src="images/vfakids.png"></td>
 </p>
 </center>
